<resources>
    <string name="app_name">SoundVisualApk</string>
    <string name="connect">Connect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_song">No Song is playing</string>
    <string name="music_navigator">Music Navigator</string>
    <string name="picture_navigator">Picture Navigator</string>
    <string name="menu_music">Menu Music</string>
    <string name="song">Song</string>
    <string name="picture">Picture</string>
    <string name="http">Http</string>
    <string name="connecting">Connecting</string>
    <string name="play_button">Play Button</string>
    <string name="search_button">Search Button</string>
    <string name="in_process">In process</string>
    <string name="search">search</string>
    <string name="skip_button">Skip Button</string>
    <string name="back_button">Back Button</string>
</resources>