<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SongPlayer">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="50dp"
        tools:listitem="@layout/song_item" />

    <TextView
        android:id="@+id/connecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <HorizontalScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/current_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp" />
            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_skip_previous_24"
            android:contentDescription="@string/back_button" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:contentDescription="@string/play_button" />

        <ImageView
            android:id="@+id/skip_button"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_skip_next_24"
            android:contentDescription="@string/skip_button" />
    </LinearLayout>

    <ImageView
        android:id="@+id/search"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/ic_baseline_search_24"
        android:background="@drawable/round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/search_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/search"
        android:background="@drawable/round_corners"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="5dp"
        android:padding="7dp"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_text"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>